--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   sqflite: ^2.2.0+3
   path: ^1.8.3
+  carousel_slider: 
 
 
   # The following adds the Cupertino Icons font to your application.
